@@ -279,7 +279,6 @@ Suggested package updates
 	o maradns-1.0.21
 	o marbles-1.0.6
 	o matchbox-0.8.2 [pkgsrc-wip]
-	o mathomatic-11.1b
 	o mhonarc-2.6.9
 	o micq-0.4.11
 	o midnight-commander-4.6.0
