@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2004/05/10 16:47:15 minskim Exp $
+# $NetBSD: Makefile,v 1.10 2004/05/14 15:01:31 minskim Exp $
 #
 
-DISTNAME=		mathomatic-11.1
+DISTNAME=		mathomatic-11.1b
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
@@ -13,7 +13,6 @@ COMMENT=		Small portable symbolic math program
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}/am
-DIST_SUBDIR=		${PKGNAME_NOREV}
 USE_BUILDLINK3=		yes
 NO_CONFIGURE=		yes
 MAKEFILE=		makefile
