@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5934 2004/05/14 13:33:32 adam Exp $
+$NetBSD: CHANGES,v 1.5935 2004/05/14 15:01:31 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2527,3 +2527,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ethereal to 0.10.4 [xtraeme 2004-05-14]
 	Updated xterm to 188 [grant 2004-05-14]
 	Updated net-snmp to 5.1.1 [adam 2004-05-14]
+	Updated mathomatic to 11.1b [minskim 2004-05-14]
